--- a/CloudFormation/servers.yaml
+++ b/CloudFormation/servers.yaml
@@ -1,10 +1,12 @@
+Description: >
+  Miguel Alberto Del Moral Gonzalez
+
 Parameters:
   EnvironmentName:
     Description: An environment name that will be prefixed to resource names
     Type: String
 
 Resources:
-
   RootRole:
     Type: AWS::IAM::Role
     Properties:
