--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -11,9 +11,17 @@ pipeline {
              }
          }
          stage('Lint HTML') {
-              steps {
-                  sh 'tidy -q -e Jenkins/*.html'
-              }
+             steps {
+                 sh 'tidy -q -e Jenkins/*.html'
+             }
+         }
+	 stage('Upload to AWS') {
+             steps {
+                 withAWS(region:'us-east-2',credentials:'aws-static') {
+                 sh 'echo "Uploading content with AWS creds"'
+                     s3Upload(pathStyleAccessEnabled: true, payloadSigningEnabled: true, file:'index.html', bucket:'bucket-name')
+                 }
+             }
          }
      }
 }
